--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-body{
-    overflow: hidden;
+html,body {
+    min-height: 100vh;
+    min-width: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 .f-small{
@@ -25,5 +28,12 @@ body{
   
 .log {
     margin-top: 8px;
-    font-family: monospace;
 }
+
+.circulo {
+    height: 25px;
+    width: 25px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+  }
