--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html,body {
 .box {
     width: 300px;
     height: 300px;
-    border: 1px solid black;
+    border: 1px solid rgb(0, 0, 0);
     padding: 2px 4px;
     overflow-y: scroll;
     overflow-x: auto;
@@ -30,10 +30,83 @@ html,body {
     margin-top: 8px;
 }
 
-.circulo {
-    height: 25px;
-    width: 25px;
-    background-color: #bbb;
-    border-radius: 50%;
+.nodo1 {
+    height: 150px;
+    width: 124px;
+    background-color: yellow;
+    position: absolute;
     display: inline-block;
+    left: calc(50% - 62px);
+    top: 5%;
+    border-radius: 15%;
+    border-style: solid;
+    border-color: rgb(3, 3, 3);
+    text-align: center;
+    font-size: larger;
+}
+
+.nodo2 {
+    height: 150px;
+    width: 124px;
+    background-color: yellow;
+    position: absolute;
+    display: inline-block;
+    left: calc(25% - 62px);
+    top: 70%;
+    border-radius: 15%;
+    border-style: solid;
+    border-color: rgb(3, 3, 3);
+    text-align: center;
+    font-size: larger;
+}
+
+.nodo3 {
+    height: 150px;
+    width: 124px;
+    background-color: yellow;
+    position: absolute;
+    display: inline-block;
+    left: calc(75% - 62px);
+    top: 70%;   
+    border-radius: 15%;
+    border-style: solid;
+    border-color: rgb(3, 3, 3);
+    text-align: center;
+    font-size: larger;
+}
+
+.modal {
+    display: none; 
+    position: absolute; 
+    z-index: 1;  /*Por encima de todo*/
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
   }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 40px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
