--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@ html,body {
 }
 
 .box {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     border: 1px solid rgb(0, 0, 0);
     padding: 2px 4px;
     overflow-y: scroll;
