--- a/css/style.css
+++ b/css/style.css
@@ -86,27 +86,38 @@ html,body {
     overflow: auto; 
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4);
-  }
+}
   
-  .modal-content {
+.modal-content {
     background-color: #fefefe;
     margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
     width: 80%; 
-  }
+}
   
-  .close {
+.close {
     color: #aaa;
     float: right;
     font-size: 40px;
     font-weight: bold;
-  }
+}
   
-  .close:hover,
-  .close:focus {
+.close:hover,
+.close:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
+circle:hover{
+    
+    opacity: 30%;
+    
+}
+
+circle{
+      stroke: black;
+      stroke-width: 0.5%;
+      stroke-linecap: round;
+}
