Acabada la mayoría de funcionalidades a falta de probarlas. ERRORES CONOCIDOS: - Falta añadir en el los mensajes sobre la partición de red. - Las particiones no desaparecen automáticamente en el modo automático - Añadir estadistcas finales sobre las particiones -  Problema con nodos que ya habian llegado al consenso, pero al no haber llega todos, al recibir una nueva promesa se bloquean.

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,21 @@ circle:hover{
     margin-right: 10%;
 }
 .slider {
-    width: 100%; /* Full-width */
-    height: 20%; /* Specified height */
+    width: 100%; 
+    height: 20%; 
     
 }
+
+
+.circuloProgreso{
+    stroke-dasharray: 10 20;
+    visibility: hidden   ;
+    fill: none;
+    stroke: rgb(148, 94, 94);
+    fill-rule: evenodd;
+    
+}
+
+
+
+
